lab12_imagepolicy/deployment-fixed.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fake-nginx
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fake-nginx
  template:
    metadata:
      labels:
        app: fake-nginx
    spec:
      containers:
      - name: web
        image: nginx:alpine
        ports:
        - containerPort: 80
